Here's the commented version of the code:

```ruby
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Set up load paths to include local and library directories
this_dir = File.expand_path(File.dirname(__FILE__))
lib_dir = File.join(File.dirname(this_dir), 'lib')
$LOAD_PATH.unshift(lib_dir) unless $LOAD_PATH.include?(lib_dir)
$LOAD_PATH.unshift(this_dir) unless $LOAD_PATH.include?(this_dir)

# Require necessary libraries
require 'grpc'
require 'histogram'
require 'src/proto/grpc/testing/benchmark_service_services_pb'

# Class to model Poisson process for request timing
class Poisson
  # Calculate interarrival time using exponential distribution formula
  def interarrival
    @lambda_recip * (-Math.log(1.0-rand))
  end

  # Advance to next scheduled time and return current time
  def advance
    t = @next_time
    @next_time += interarrival
    t
  end

  # Initialize Poisson process with given lambda (rate parameter)
  def initialize(lambda)
    @lambda_recip = 1.0/lambda  # Store reciprocal for efficiency
    @next_time = Time.now + interarrival  # Schedule first event
  end
end

# Main benchmark client class for gRPC performance testing
class BenchmarkClient
  # Initialize benchmark client with configuration
  def initialize(config)
    opts = {}
    
    # Set up security credentials if specified in config
    if config.security_params
      if config.security_params.use_test_ca
        certs = load_test_certs
        cred = GRPC::Core::ChannelCredentials.new(certs[0])
      else
        cred = GRPC::Core::ChannelCredentials.new()
      end
      
      # Handle server host override if specified
      if config.security_params.server_host_override
        channel_args = {}
        channel_args[GRPC::Core::Channel::SSL_TARGET] =
          config.security_params.server_host_override
        opts[:channel_args] = channel_args
      end
    else
      cred = :this_channel_is_insecure
    end
    
    # Initialize histogram for tracking latency measurements
    @histres = config.histogram_params.resolution
    @histmax = config.histogram_params.max_possible
    @start_time = Time.now
    @histogram = Histogram.new(@histres, @histmax)
    @done = false  # Flag to control when benchmark should stop

    # Prepare the request message based on configuration
    gtsr = Grpc::Testing::SimpleRequest
    gtpt = Grpc::Testing::PayloadType
    gtp = Grpc::Testing::Payload
    simple_params = config.payload_config.simple_params
    req = gtsr.new(response_type: gtpt::COMPRESSABLE,
                   response_size: simple_params.resp_size,
                   payload: gtp.new(type: gtpt::COMPRESSABLE,
                                    body: nulls(simple_params.req_size)))

    @child_threads = []  # Store all worker threads

    # Create channels and RPC workers according to configuration
    (0..config.client_channels-1).each do |chan|
      gtbss = Grpc::Testing::BenchmarkService::Stub
      st = config.server_targets
      # Create stub for each channel with round-robin server assignment
      stub = gtbss.new(st[chan % st.length], cred, **opts)
      
      # Create outstanding RPCs per channel
      (0..config.outstanding_rpcs_per_channel-1).each do |r|
        @child_threads << Thread.new {
          # Set up appropriate load generation mechanism
          case config.load_params.load.to_s
          when 'closed_loop'
            waiter = nil  # No delay between requests
          when 'poisson'
            # Distribute load evenly across all channels/RPCs
            waiter = Poisson.new(config.load_params.poisson.offered_load /
                                 (config.client_channels *
                                  config.outstanding_rpcs_per_channel))
          end
          
          # Start appropriate RPC type based on configuration
          case config.rpc_type
          when :UNARY
            unary_ping_ponger(req,stub,config,waiter)
          when :STREAMING
            streaming_ping_ponger(req,stub,config,waiter)
          end
        }
      end
    end
  end

  # Wait until it's time to issue next request (if using Poisson timing)
  def wait_to_issue(waiter)
    if waiter
      delay = waiter.advance-Time.now
      sleep delay if delay > 0
    end
  end

  # Handle unary RPC calls (single request, single response)
  def unary_ping_ponger(req, stub, config, waiter)
    while !@done
      wait_to_issue(waiter)  # Respect request timing
      start = Time.now
      resp = stub.unary_call(req)  # Make unary call
      @histogram.add((Time.now-start)*1e9)  # Record latency in nanoseconds
    end
  end

  # Handle streaming RPC calls (multiple requests/responses on single connection)
  def streaming_ping_ponger(req, stub, config, waiter)
    q = EnumeratorQueue.new(self)
    resp = stub.streaming_call(q.each_item)  # Start streaming call
    start = Time.now
    q.push(req)  # Send initial request
    pushed_sentinal = false
    
    # Process responses
    resp.each do |r|
      @histogram.add((Time.now-start)*1e9)  # Record latency
      if !@done
        wait_to_issue(waiter)
        start = Time.now
        q.push(req)  # Send next request
      else
        # Benchmark is done, push sentinel value if not already done
        q.push(self) unless pushed_sentinal
        pushed_sentinal = true
      end
    end
  end

  # Get current statistics and optionally reset measurements
  def mark(reset)
    # Package histogram data into protobuf format
    lat = Grpc::Testing::HistogramData.new(
      bucket: @histogram.contents,
      min_seen: @histogram.minimum,
      max_seen: @histogram.maximum,
      sum: @histogram.sum,
      sum_of_squares: @histogram.sum_of_squares,
      count: @histogram.count
    )
    elapsed = Time.now-@start_time
    
    # Reset measurements if requested
    if reset
      @start_time = Time.now
      @histogram = Histogram.new(@histres, @histmax)
    end
    
    # Return statistics including latency data and elapsed time
    Grpc::Testing::ClientStats.new(latencies: lat, time_elapsed: elapsed)
  end

  # Shut down all worker threads
  def shutdown
    @done = true  # Signal workers to stop
    @child_threads.each do |thread|
      thread.join  # Wait for all threads to complete
    end
  end
end
```

The comments explain:
1. The overall purpose of each class and method
2. Key implementation details
3. Configuration handling
4. Performance measurement approach
5. Threading model
6. Different RPC types (unary vs streaming)
7. Load generation strategies (closed loop vs Poisson)
8. Security configuration
9. Statistics collection and reporting

The comments are designed to help future developers understand:
- The architecture of the benchmark client
- How different configuration options affect behavior
- The performance measurement methodology
- The threading and synchronization approach
- The protocol buffer message handling